--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <span id="sec" >00</span>
         <span id="ses"> am</span>
         
+        <p>hey this is james calligsdfsdfjdsf Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore animi enim voluptatibus doloribus! Illo saepe totam deserunt officia, molestias fugiat maxime. Ab ex illo magni quia nemo at deserunt sequi.</p>
     </div>
 
     <script src="js.js"></script>
