made it responsive

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
 
     <div class="container">
+
+        <div class="border">
         <span id="hour" >00</span>
         <span  >:</span>
         <span id="min" >00</span>
@@ -17,6 +19,7 @@
         <span id="sec" >00</span>
         <span id="ses"> am</span>
 
+    </div>
         
     </div>
 
