--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="container">
 
-        <div class="border">
+      <span></span>
         <span id="hour" >00</span>
         <span  >:</span>
         <span id="min" >00</span>
@@ -19,7 +19,6 @@
         <span id="sec" >00</span>
         <span id="ses"> am</span>
 
-    </div>
         
     </div>
 
